test/pass/patata.ditto
int glob;
func main()
    int x := scan();
    if x == 0 then
        print(x);
    else 
 	   	for i from 1 to x by 2 do
        	print(i);
        end
    end
end
